chore(*): add files to implement

--- a/messages.html
+++ b/messages.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Power plant</title>
+    <title>Messages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -18,9 +18,9 @@
     <a class="navbar-brand" href="#">Powerplant™</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <div class="nav-item nav-link active">Home</div>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="users.html">Users</a>
-            <a class="nav-item nav-link" href="#">Messages <span class="badge badge-light">1</span></a>
+            <div class="nav-item nav-link active">Messages <span class="badge badge-light">1</span></div>
         </div>
     </div>
 </nav>
