--- a/login.html
+++ b/login.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Login</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <style>
+        html, body
+        {
+            background-color: #1d2127;
+            height: 100%;
+        }
+
+        .v-centered {
+            position: relative;
+            top: 40%;
+            transform: translateY(-40%);
+        }
+    </style>
 </head>
 <body>
+
+<div class="container v-centered">
+    <div class="jumbotron bg-dark text-light">
+        <h1 class="text-center">Login</h1><br/>
+        <form class="form-horizontal" action="index.html" method="post">
+            <div class="form-group row">
+                <label class="control-label col-sm-2" for="username">Username:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control bg-dark text-white" id="username" name="username" placeholder="Enter username">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="control-label col-sm-2" for="pwd">Password:</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control bg-dark text-white" id="pwd" name="password" placeholder="Enter password">
+                </div>
+            </div>
+            <div id="login-error" class="invisible">
+                <div class="alert alert-danger" role="alert">
+                    Incorrect username or password
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-outline-light btn-lg">Login</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<script>
+    const url = new URL(window.location.href);
+    const err = url.searchParams.get('err');
+    if(err === '1') {
+        document.getElementById('login-error').className = "visible";
+    }
+</script>
 
 </body>
 </html>
