--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <div class="nav-item nav-link active">Home</div>
-            <a class="nav-item nav-link" href="users.html">Users</a>
-            <a class="nav-item nav-link" href="#">Messages <span class="badge badge-light">1</span></a>
+            <a class="nav-item nav-link" href="login.html">Login</a>
         </div>
     </div>
 </nav>
