--- a/indexAdmin.html
+++ b/indexAdmin.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -17,11 +18,14 @@
     </button>
     <a class="navbar-brand" href="#">Powerplant™</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav mr-auto">
             <div class="nav-item nav-link active">Home</div>
             <a class="nav-item nav-link" href="users.html">Users</a>
-            <a class="nav-item nav-link" href="#">Messages <span class="badge badge-light">1</span></a>
+            <a class="nav-item nav-link" href="messages.html">Messages <span class="badge badge-light">1</span></a>
         </div>
+    </div>
+    <div class="navbar-nav navbar-right">
+        <a class="nav-item nav-link" href="logout"><span class="fa fa-power-off"></span> Logout</a>
     </div>
 </nav>
 
