--- a/messagesAdmin.html
+++ b/messagesAdmin.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Power plant</title>
+    <title>Messages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -20,9 +19,9 @@
     <a class="navbar-brand" href="#">Powerplant™</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mr-auto">
-            <div class="nav-item nav-link active">Home</div>
+            <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="users.html">Users</a>
-            <a class="nav-item nav-link" href="messages.html">Messages <span class="badge badge-light">##unread##</span></a>
+            <div class="nav-item nav-link active">Messages <span class="badge badge-light">##unread##</span></div>
         </div>
     </div>
     <div class="navbar-nav navbar-right">
