--- a/users.html
+++ b/users.html
@@ -5,26 +5,56 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav class="navbar navbar-toggleable-sm navbar-expand-sm bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-toggleable-sm navbar-expand-sm bg-dark navbar-dark">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="#">Powerplant™</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <div class="nav-item nav-link active">Users</div>
-            <a class="nav-item nav-link" href="messages.html">Messages <span class="badge badge-light">1</span></a>
+            <a class="nav-item nav-link" href="messages.html">Messages <span class="badge badge-light">##unread##</span></a>
         </div>
+    </div>
+    <div class="navbar-nav navbar-right">
+        <span class="navbar-text">Hello ##username##! | </span>
+        <a class="nav-item nav-link" href="logout"><span class="fa fa-power-off"></span> Logout</a>
     </div>
 </nav>
 
-
+<div class="container">
+    <h3 class="text-light">User list</h3>
+    <table class="table table-dark table-striped">
+        <thead>
+        <tr>
+            <th>Username</th>
+            <th>Role</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>John</td>
+            <td>Doe</td>
+        </tr>
+        <tr>
+            <td>Mary</td>
+            <td>Moe</td>
+        </tr>
+        <tr>
+            <td>July</td>
+            <td>Dooley</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
