feat(users): add user listing

--- a/users.html
+++ b/users.html
@@ -40,20 +40,7 @@
             <th>Role</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-        </tr>
-        <tr>
-            <td>Mary</td>
-            <td>Moe</td>
-        </tr>
-        <tr>
-            <td>July</td>
-            <td>Dooley</td>
-        </tr>
-        </tbody>
+        ##users##
     </table>
 </div>
 </body>
